# fire-number--final-year-pro

./: .env  .gitignore  README.md  create_tables.py  fire_number.py  main.py  pyproject.toml  test_auth.py  user_input.py
api_gateway/: main.py
chat_service/: execution_engine.py  explanation_engine.py  financial_interpreter.py  financial_sanity.py  financial_state.py  guardrails.py  llm_client.py  main.py  mcp_router.py  memory.py  memory_redis.py  models.py  orchestrator.py  planner.py  scenario_engine.py  state.py  tool_executor.py  tools.py
chat_service/pipeline/: chat_prompt_builder.py
chroma_db/: chroma.sqlite3
docs/: DATABASE_ARCHITECTURE.md
explain_service/: main.py
explain_service/pipeline/: chunker.py  embedder.py  file_parser.py  ingestion.py  llm_client.py  metadata.py  prompt_builder.py  retrieval.py  validator.py  vectordb.py  versioning.py
fire_service/: fire_engine.py  main.py
health_service/: financial_health_score.py  main.py
loan_optimzer_service/: loan_engine.py  main.py
migrations/: docker-compose.yml
shared/: __init__.py  database.py  database_enterprise.py
shared/models/: __init__.py  chat.py  enterprise_models.py  financial_profile.py  fire.py  health.py  loan.py  user.py
shared/services/: auth.py  auth_routes.py  dashboard_routes.py  fire_service.py  health_service.py  loan_service.py  service_auth.py
