[project]
name = "fire-number"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "pypdf>=6.7.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "uvicorn>=0.40.0",
]
